# ecoledirecte-imap

./: Cargo.toml  README.md  tmp-fetch.rs
src/: api.rs  auth.rs  fetch.rs  lib.rs  mailbox.rs  main.rs
