[package]
name = "ecoledirecte-imap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
imap-codec = { version = "1.0.0", features = ["bounded-static"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_json = "1.0.107"
